Fix hexagon alignment

--- a/client/common/sass/search/_search-list.sass
+++ b/client/common/sass/search/_search-list.sass
@@ -18,7 +18,7 @@
 
 .search-list__icon--W
   // line up the middle of the hexagon with the title
-  margin-top: -2px
+  margin-top: -1px
   fill: $slate
 
 .search-item
